hphp/test/zend/good/ext/date/tests/cal_days_in_month_invalid_calendar.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("calendar")) { echo "skip extension not available"; }
}
