hphp/test/zend/bad/ext/curl/tests/curl_version_variation1.php.skipif
<?php 
if (!extension_loaded("curl")) {
	echo "skip - curl extension not available in this build";
}
if (!getenv('PHP_CURL_HTTP_REMOTE_SERVER')) {
	echo "skip need PHP_CURL_HTTP_REMOTE_SERVER environment variable";
}
?>